name:               PicWeb
version:            1.0.0
cabal-version:      >= 1.8
build-type:         Simple
extra-source-files: routes

executable          PicWeb
  main-is:          Main.hs
  other-modules:    Application
                    Foundation

  ghc-options:      -Wall -fwarn-tabs -O2

  build-depends:  base >=4.5 && <4.10
                , yesod-core
                , shakespeare
                , blaze-markup
                , text >=0.11 && <1.3
                , yesod-static
                , yesod-form
                , hledger-web
                , unix-time
                , yesod
                , cookie
                , wai
                , persistent >=2.1.1.7 && <2.3
                , persistent-template
                , persistent-sqlite
                , resourcet
                , yesod-persistent
                , blaze-builder
                , conduit >=1.1
                , wai-extra
                , monad-logger
                , time
                , blaze-html
                , esqueleto == 2.4.3
  ghc-options:    -threaded -O2 -rtsopts -with-rtsopts=-N
